[package]
name = "ens-savior"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.8.3", features = ["full", "ens"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
