[package]
name = "ens-savior"
version = "0.1.0"
edition = "2024"
description = "Recover ENS names from a compromised wallet via private Flashbots bundle submission"
authors = ["0xPenryn"]
license = "MIT"
repository = "https://github.com/0xPenryn/ens-savior"
homepage = "https://github.com/0xPenryn/ens-savior"
keywords = ["ens", "ethereum", "flashbots", "recovery", "mev"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
alloy = { version = "1.8.3", features = ["full", "ens", "signer-mnemonic"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
